--- a/package.json
+++ b/package.json
@@ -13,6 +13,8 @@
     "express": "^4.18.2",
     "morgan": "^1.10.0",
     "nodemon": "^2.0.22",
+    "pg": "^8.10.0",
+    "pg-promise": "^11.4.3",
     "router": "^1.3.8"
   }
 }
