--- a/package.json
+++ b/package.json
@@ -15,6 +15,8 @@
     "nodemon": "^2.0.22",
     "pg": "^8.10.0",
     "pg-promise": "^11.4.3",
-    "router": "^1.3.8"
+    "router": "^1.3.8",
+    "swagger-jsdoc": "^6.2.8",
+    "swagger-ui-express": "^4.6.2"
   }
 }
